--- a/src/App.css
+++ b/src/App.css
@@ -120,10 +120,10 @@
   border-radius: 12px;
 }
 
-@media only screen and (max-width: 330px) {
+@media only screen and (max-width: 600px) {
   .individualItem-item-image {
-    width: 200px;
-    height: 200px;
+    max-width: 250px;
+    max-height: 200px;
   }
 }
 
