--- a/src/App.css
+++ b/src/App.css
@@ -314,8 +314,8 @@
 @media only screen and (max-width: 600px) {
   .itemsList {
     grid-template-columns: 170px 170px;
-    grid-template-rows: 1fr 0.7fr;
-    margin: 0;
+    grid-template-rows: 1fr 0.1fr;
+    margin: 0rem 0 0rem 0rem;
   }
 
   .itemsListPicture {
@@ -335,7 +335,7 @@
 
   .itemsListPrice {
     display: flex;
-    margin: -0.4rem 0 0 0;
+    margin: -1.5rem 0 1rem 0;
     grid-column: 2;
     align-self: start;
     justify-self: start;
@@ -344,6 +344,11 @@
   .itemsListPrice button {
     align-self: start;
     margin: 0 0 0 1rem;
+  }
+  .thumbnailImageStyle {
+    height: 120px;
+    width: 120px;
+    align-self: center;
   }
 }
 
@@ -373,6 +378,37 @@
   outline: none;
 }
 
+.dash-navigationButtons {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.dash-navigationButtons button {
+  margin: 0 0.8rem 0 0.8rem;
+  padding: 12px;
+  background-color: #faedcd;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+@media screen and (min-width: 601px) {
+  .dash-navigationButtons button {
+    width: 5rem;
+  }
+}
+
+.dash-navigationButtons button:hover {
+  background-color: #d4a373;
+  color: #fff;
+}
+
+.dash-navigationButtons button:focus {
+  outline: none;
+}
+
 .sort-data-items-wrapper {
   display: flex;
   margin: 0.5rem;
@@ -391,8 +427,20 @@
   border-radius: 6px;
 }
 
-.sort-data-item .sort-data-item-cats {
+.sort-data-item {
   text-align-last: center;
+}
+
+.sort-data-item-cats {
+  text-align-last: center;
+}
+.sort-data-item-age {
+  text-align-last: center;
+  text-align: center;
+}
+.sort-data-item-price {
+  text-align-last: center;
+  text-align: center;
 }
 
 .sort-data-item:hover {
@@ -407,15 +455,25 @@
 @media screen and (max-width: 600px) {
   .navigationButtons {
     display: grid;
-    grid-template-columns: 1fr 1fr ;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .dash-navigationButtons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 1rem;
+  }
+
+  .dash-navigationButtons {
+    justify-self: center;
   }
 
   .sort-data-items-wrapper {
     margin: 0.4rem;
   }
 }
+
 .pagination {
   display: inline-block;
   margin-bottom: 10px;
@@ -476,6 +534,30 @@ footer {
 }
 
 /*post-page*/
+
+.post-item-header {
+  margin: 2rem;
+}
+
+.post-item-select-menu {
+  color: #2b2a28;
+  font-family: "Roboto", sans-serif;
+}
+.post-item-select-menu::placeholder {
+  color: #2b2a28;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.85rem;
+}
+.custom-file-input::placeholder {
+  color: #2b2a28;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.85rem;
+}
+
+.file-upload-button {
+  background-color: red;
+}
+
 input[type="text"],
 select,
 textarea {
@@ -521,6 +603,9 @@ input[type="file"] {
   box-sizing: border-box;
   font-size: 1rem;
   resize: vertical;
+  color: #2b2a28;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.85rem;
 }
 
 label {
@@ -993,7 +1078,6 @@ form {
   .purchase-info-header {
     margin: -2rem 0 1rem 1.2rem;
   }
-  
 }
 
 .dashboard-msg {
