--- a/src/App.css
+++ b/src/App.css
@@ -251,15 +251,14 @@
 
 .itemsList {
   display: grid;
-  grid-template-columns: 300px 300px 300px;
-  /* margin: 2rem 5rem 1rem 5rem; */
+  grid-template-columns: 230px 230px 230px;
   margin: 1rem;
   gap: 2rem;
   justify-content: center;
   align-items: center;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 800px) {
   .itemsList {
     grid-template-columns: 180px 180px 180px;
   }
@@ -376,6 +375,24 @@
   }
 }
 
+@media only screen and (max-width: 340px) {
+  .itemsList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .itemsListTitle {
+    align-self: center;
+  }
+  .itemsListPrice-amount {
+    align-self: center;
+  }
+  .itemsListPrice button {
+    align-self: center;
+  }
+}
+
 .navigationButtons {
   display: flex;
   flex-wrap: wrap;
@@ -475,9 +492,17 @@
   margin: 0 0.8rem;
 }
 
-@media screen and (max-width: 630px) {
+@media screen and (max-width: 640px) {
   .sort-data-items-wrapper {
     margin: 0.8rem;
+  }
+}
+@media screen and (max-width: 380px) {
+  .sort-data-items-wrapper {
+    margin: 0.8rem;
+  }
+  .itemsListPrice {
+    margin: 0 0 0.5rem;
   }
 }
 
